# tina-V83x

./: .config.old  .gitignore  .gitmodules  README.md  push.sh
dl/: .gitignore  (+1 more)
package/allwinner/alsa-plugins-aw/files/: Makefile.am  configure.ac
package/allwinner/alsa-plugins-aw/files/aw/: Makefile.am  aumixcom.h  doResample.h  rate_awrate.c
package/allwinner/alsa-plugins-aw/files/p-eq/: Makefile.am  README.txt  awequal.conf  eq.h
package/allwinner/boot-play/src/: CMakeLists.txt  boot-play.c  bootanimation.c  bootanimation.h  fb_display.c  fbviewer.h  png.c
package/allwinner/crash-handler/files/crash-handler/src/dump-stack/: CMakeLists.txt  COPYING  dump-stack-aarch64.c  dump-stack-arm.c  dump-stack-libunw.c  dump-stack.c  dump-stack.h
package/allwinner/crash-handler/files/crash-handler/tests/: CMakeLists.txt  test-dump-stack.c
package/allwinner/homlet/libvop/libvop/: Makefile.am  bootstrap  configure.ac
package/allwinner/homlet/libvop/libvop/example/: Makefile.am  voptest.c
package/allwinner/homlet/libvop/libvop/src/: Makefile.am  sunxi_display2.h  sunxi_vop.c  sunxi_vop.h
package/allwinner/homlet/libvop/libvop/src/edid/: Makefile.am  cea_vic.cpp  cea_vic.h  edid.cpp  edid.h  sunxi_edid.cpp  sunxi_edid.h
package/allwinner/homlet/p2p_utils/libs/p2p_wpa/: Makefile  Makefile.am  WFDMessageQueue.c  libwpa_client.b  p2pManager.c  wfd_log.c  wpa_cli.c  wpa_cli.d
package/allwinner/homlet/p2p_utils/libs/p2p_wpa/include/: WFDMessageQueue.h  p2pManager.h  wfd_log.h  wpa_cli.h
package/allwinner/tconfigs/files/: CMakeLists.txt  config_draft.json  utils.cmake
package/allwinner/tconfigs/files/include/tconfigs/: tconfigs.h
package/allwinner/tconfigs/files/src/common/: any.cpp  signal_slot.cpp  string.cpp  time.cpp
package/allwinner/tconfigs/files/src/event/: event_loop.cpp
package/allwinner/tconfigs/files/src/file/: file_node_utils.cpp  file_utils.cpp  wav_utils.cpp
package/allwinner/tconfigs/files/src/input/: input_event_watcher.cpp  input_utils.cpp  key_handler.cpp  key_input_event_handler.cpp  key_manager.cpp
package/allwinner/tconfigs/files/src/json/: json_utils.cpp
package/allwinner/tconfigs/files/src/log/: logger.cpp
package/allwinner/tconfigs/files/src/threading/: executor.cpp  semaphore.cpp  task_queue.cpp  task_thread.cpp  task_thread_pool.cpp
package/allwinner/tconfigs/files/test/: CMakeLists.txt  unit_test_alsa_src_alsa_sink.cpp  unit_test_amixer_utils.cpp  unit_test_any.cpp  unit_test_bus.cpp  unit_test_event_loop.cpp  unit_test_file_src_converter_file_sink.cpp  unit_test_file_src_converter_file_sink.json  unit_test_file_src_file_sink.cpp  unit_test_input_event_watcher.cpp  unit_test_input_utils.cpp  unit_test_json_utils.cpp  unit_test_key_handler.cpp  unit_test_pipeline.cpp  unit_test_signal_slot.cpp  unit_test_volume_manager.cpp  unit_test_wav_utils.cpp
package/allwinner/tconfigs/files/test/config/: unit_test_volume_manager.json
package/allwinner/tina_multimedia/libcedarc/base/: Android.mk  CdcIonUtil.c  CdcMalloc.c  CdcMessageQueue.c  CdcSysinfo.c  Makefile.am  Makefile.in
package/allwinner/tina_multimedia/libcedarc/base/cdcIniparser/: cdcIniparser.c  cdcIniparserapi.c
package/allwinner/tina_multimedia/libcedarc/base/include/: cdc_version.h  log.h
package/allwinner/tina_multimedia/libcedarc/demo/vencoderDemo/: Android.mk  EncoderTest.c  Makefile  Makefile.am  Makefile.in
package/allwinner/tina_multimedia/libcedarc/openmax/omxcore/: Makefile.am  aw_omx_component.c  aw_omx_core.c  aw_omx_core.h
package/allwinner/tina_multimedia/libcedarc/openmax/venc/: Makefile.am  omx_common.h  omx_tsem.c  omx_tsem.h  omx_venc.c  omx_venc.h  omx_venc_adapter.h  omx_venc_android_adapter.cpp  omx_venc_linux_adapter.c
package/avs/libconfigutils/files/src/libs/: CMakeLists.txt  ConfigUtils.cpp  Element.cpp
package/avs/libconfigutils/files/src/test/: CMakeLists.txt  main.cpp  unit_test_ac108provider.cpp  unit_test_audiodataconvertor.cpp  unit_test_audiodataconvertor_fileprovider.cpp  unit_test_configoverlay.cpp  unit_test_element.cpp  unit_test_eventwatch.cpp  unit_test_executor.cpp  unit_test_i2c_adapter.cpp  unit_test_inputeventwatch.cpp  unit_test_keyeventwatch.cpp  unit_test_led.cpp  unit_test_ledgroup.cpp  unit_test_ledpad.cpp  unit_test_platfromadapter.cpp  unit_test_show.cpp  unit_test_show_manager.cpp  unit_test_tutuclearfilter_ac108_audiocodec_provider.cpp  unit_test_tutuclearfilter_ac108provider.cpp  unit_test_tutuclearfilter_double_fileprovider.cpp  unit_test_tutuclearfilter_fileprovider.cpp
package/avs/libsensory/files/test/: CMakeLists.txt  main.cpp
package/avs/libsensory/files/wrapper/: CMakeLists.txt
package/avs/libsensory/files/wrapper/chk/: asprintf_chk.c  chk_fail.c  confstr_chk.c  fdelt_chk.c  fgets_chk.c  fgetws_chk.c  fortify.h  fprintf_chk.c  fwprintf_chk.c  getcwd_chk.c  getgroups_chk.c  gethostname_chk.c  getlogin_r_chk.c  locale_impl.h  longjmp_chk.c  mbsnrtowcs_chk.c  mbsrtowcs_chk.c  mbstowcs_chk.c  memcpy_chk.c  memmove_chk.c  mempcpy_chk.c  memset_chk.c  pread_chk.c  printf_chk.c  read_chk.c  readlink_chk.c  realpath_chk.c  recv_chk.c  recvfrom_chk.c  snprintf_chk.c  sprintf_chk.c  stpcpy_chk.c  stpncpy_chk.c  strcat_chk.c  strcpy_chk.c  strncat_chk.c  strncpy_chk.c  swprintf_chk.c  syslog_chk.c  ttyname_r_chk.c  (+22 more)
package/avs/libsensory/files/wrapper/include/: snsr.h
package/avs/libsensory/files/wrapper/models/: thfft_alexa_a_enus_v3_1mb.snsr  thfft_alexa_a_enus_v3_1mb_search_8.snsr
package/avs/libtutuclear/files/src/test/: CMakeLists.txt  main.cpp
package/avs/sampleapp/files/source/: CMakeLists.txt
package/avs/sampleapp/files/source/fetch-device-sn/: CMakeLists.txt  main.cpp
package/avs/sampleapp/files/source/sample-wakeup/: CMakeLists.txt  main.cpp  test.sh
package/libs/tinyxml/: CMakeLists.txt  Makefile
package/minigui/libminigui-gpl/src/sunxifb/: CMakeLists.txt  Makefile.am  sunxifb.c  sunxifb.h
package/minigui/libminigui-gpl/src/sunxifbion/: CMakeLists.txt  Makefile.am  sunxifbion.c  sunxifbion.h
softwinner/minigui/src/extract/: 7zFile.c  7zFile.h  7zMain.c  CpuArch.c  Makefile.am
(+5678 files in other folders)
