cmake_minimum_required(VERSION 2.6)

PROJECT(boot-play C)
INCLUDE(GNUInstallDirs)
ADD_DEFINITIONS(-Os -Wall -Werror --std=gnu99)

SET(SOURCES boot-play.c bootanimation.c fb_display.c png.c)

SET(LIBS ubox png)

IF(DEBUG)
  ADD_DEFINITIONS(-DDEBUG -g3)
ENDIF()

ADD_DEFINITIONS(-DBOOT_ANIMATION_PRIORITY=${BOOT_ANIMATION_PRIORITY})
ADD_DEFINITIONS(-DBOOT_MUSIC_PRIORITY=${BOOT_MUSIC_PRIORITY})

IF(BOOT_ANIMATION_EACHLOAD_IMAGE)
  ADD_DEFINITIONS(-DEACHLOAD_IMAGE)
ENDIF()

IF(COMPLETE_TIMEOUT)
  ADD_DEFINITIONS(-DCOMPLETE_TIMEOUT=${COMPLETE_TIMEOUT})
ENDIF()
IF(COMPLETE_ANIMATION)
  ADD_DEFINITIONS(-DCOMPLETE_ANIMATION)
ENDIF()
IF(COMPLETE_MUSIC)
  ADD_DEFINITIONS(-DCOMPLETE_MUSIC)
ENDIF()

ADD_EXECUTABLE(boot-play ${SOURCES})
TARGET_LINK_LIBRARIES(boot-play ${LIBS})
INSTALL(TARGETS boot-play
	RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR})
