INCLUDES = -I$(abs_top_srcdir)/src/extract

noinst_LTLIBRARIES = libextract.la
ALL_FILES= \
    7zAlloc.c \
    7zBuf.c \
    7zCrc.c \
    7zCrcOpt.c \
    7zDec.c \
    7zFile.c \
    7zIn.c \
    7zMain.c \
    7zStream.c \
    Bcj2.c \
    Bra86.c \
    Bra.c \
    CpuArch.c \
    Lzma2Dec.c \
    LzmaDec.c
libextract_la_SOURCES=$(ALL_FILES)
libextract_la_LIBADD=

EXTRA_DIST=$(ALL_FILES)
